[project]
name = "soundboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jonathan-d-zhang", email = "69145546+jonathan-d-zhang@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "pynacl>=1.5.0",
]

[project.scripts]
soundboard = "soundboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soundboard"]
