[project]
name = "soundboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "jonathan-d-zhang", email = "69145546+jonathan-d-zhang@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.6",
  "pydantic>=2.10.3",
  "pydantic-settings>=2.7.0",
  "pynacl>=1.5.0",
]

[project.scripts]
soundboard = "soundboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soundboard"]

[dependency-groups]
dev = ["pre-commit>=4.0.1"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "ANN",
  "B",
  "C4",
  "D",
  "DTZ",
  "E",
  "F",
  "I",
  "ISC",
  "INT",
  "N",
  "PGH",
  "PIE",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TID",
  "UP",
  "W",
]
ignore = [
  "ANN002",
  "ANN003",
  "ANN101",
  "ANN102",
  "ANN204",
  "ANN206",
  "ANN401",
  "B904",
  "C401",
  "C408",
  "D100",
  "D104",
  "D105",
  "D107",
  "D203",
  "D212",
  "D214",
  "D215",
  "D301",
  "D400",
  "D401",
  "D402",
  "D404",
  "D405",
  "D406",
  "D407",
  "D408",
  "D409",
  "D410",
  "D411",
  "D412",
  "D413",
  "D414",
  "D416",
  "D417",
  "E731",
  "RET504",
  "RUF005",
  "RUF012",
  "RUF015",
  "S311",
  "SIM102",
  "SIM108",
]

[tool.ruff.lint.isort]
order-by-type = false
case-sensitive = true
combine-as-imports = true


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D", "S101"]


[tool.pyright]
include = ["src/**/*.py"]
venvPath = "."
venv = ".venv"
